src/objects/Spend_Request_Product_Lookup__c.object
<CustomObject>
    <description>This is a lookup table for the Items Object on the IT Spend application that will provide a link to lookup products by name while viewing the associated Type and Category. This will be populated from the EA Data Mart table in Troux via a monthly Data Load until such time as we can get Cast Iron linkage to the Data Mart.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to determine which records will show in the search results for products.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Approved-Preferred</fullName>
                </value>
                <value>
                    <fullName>Approved-Maintain</fullName>
                </value>
                <value>
                    <fullName>Approved-Remove</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Troux_ID__c</fullName>
        <externalId>true</externalId>
        <label>Troux ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spend Request Product Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Troux_ID__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Search</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spend Request Product Lookups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>